js/js.translator/testData/incremental/invalidation/splitJoinModuleWithCrossModuleInliner/lib1/l1.5.kt
fun fooA() = 3

fun fooB() = 4

fun fooC() = 4
